Bug 462187 - Touch Mode is disabled after rebooting Aya Neo Air Pro device
Summary: Touch Mode is disabled after rebooting Aya Neo Air Pro device
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kirigami
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.101.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: Not decided
Assignee: kdelibs bugs
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2022-11-24 02:23 UTC by lurkingaround
Modified: 2022-12-31 01:33 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.102
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description lurkingaround 2022-11-24 02:23:58 UTC
SUMMARY
Touch mode doesn't stay enabled after power cycle.
You are forced to disable and enable every time you boot the device.

STEPS TO REPRODUCE
1. Enable "Touch Mode"
2. Right click to test "Touch Mode" is enabled and context menu is larger
3. Reboot device and login
4. "Touch Mode" is disabled
5. Enable "Touch Mode"
6. If you didn't open the context menu after login then disable "Touch Mode" and re-enable it or it won't apply to context menu

OBSERVED RESULT
Touch Mode is disabled after power cycle and doesn't affect context menus unless you right click after login to view it first.

EXPECTED RESULT
Touch Mode stays enabled after enabling it in Workspace Behavior.

SOFTWARE/OS VERSIONS
Windows: N/A
macOS: N/A
Linux/KDE Plasma: 6.0.9-arch1-1
(available in About System)
KDE Plasma Version: 5.26.3
KDE Frameworks Version: 5.100.0
Qt Version: 5.15.7

ADDITIONAL INFORMATION
Running on an Aya Neo Air Pro handheld PC.
Comment 1 Nate Graham 2022-12-02 01:18:16 UTC
Cannot reproduce; when I force Touch Mode to "Always enabled" and reboot, it remains on after the reboot. This was on Wayland. Are you on X11? If so, can you try on Wayland?
Comment 2 lurkingaround 2022-12-03 04:45:08 UTC
(In reply to Nate Graham from comment #1)
> Cannot reproduce; when I force Touch Mode to "Always enabled" and reboot, it
> remains on after the reboot. This was on Wayland. Are you on X11? If so, can
> you try on Wayland?

Tested my device, Aya Neo Air Pro, on both Wayland and X11 and both has this issue.
Touch mode keeps getting disabled and I have to manually enable it.
Comment 3 Nate Graham 2022-12-05 18:11:31 UTC
Interesting.
Comment 4 lurkingaround 2022-12-09 09:15:29 UTC
Couldn't find a way to edit my issue report to add more information, 5.25.X didn't have this bug, it started with 5.26.X.
System settings briefly maintains Touch Mode but once it closed and re-opened, it reverts back to Touch Mode disabled, less space around each menu items.
Comment 5 Fushan Wen 2022-12-30 15:55:53 UTC
Git commit 608c76015505140648f4ae1f7270f9ff00c3a732 by Fushan Wen.
Committed on 30/12/2022 at 15:55.
Pushed by fusionfuture into branch 'master'.

Fix getting tablet mode on application startup

The old method gets tablet mode state from a wrong interface. The
correct interface should be `org.freedesktop.DBus.Properties`.

Test: enable tablet mode, and restart plasmashell
FIXED-IN: 5.102

M  +6    -2    src/libkirigami/tabletmodewatcher.cpp

https://invent.kde.org/frameworks/kirigami/commit/608c76015505140648f4ae1f7270f9ff00c3a732