Fix getting tablet mode on application startup

The old method gets tablet mode state from a wrong interface. The
correct interface should be `org.freedesktop.DBus.Properties`.

Test: enable tablet mode, and restart plasmashell

BUG: 462187
FIXED-IN: 5.102